--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -139,7 +139,7 @@ jobs:
         uses: richardsimko/update-tag@v1
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'alpha') }}
         with:
-          tag_name: "templates@0.0.0-alpha"
+          tag_name: "templates-0.0.0-alpha"
         env:
           GITHUB_TOKEN: ${{ secrets.CD_PAT }}
 
@@ -149,7 +149,7 @@ jobs:
         with:
           token: ${{ secrets.CD_PAT }}
           prerelease: true
-          tag: "templates@0.0.0-alpha"
+          tag: "templates-0.0.0-alpha"
           artifacts: ./*.zip
           allowUpdates: true
       
