refactor(localdebug): rename cerfication to certificate

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -810,7 +810,7 @@
               },
               "devCert": {
                 "type": "boolean",
-                "description": "Ensure development certification is trusted."
+                "description": "Ensure development certificate is trusted."
               }
             },
             "additionalProperties": false,
