--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,13 +15,16 @@ on:
         description: "skip sync up target pkg version. input templates to skip sync up version with sdk; fx-core to skip sync up with simpleauth"
         required: false
         default: ""
+      releasae-visx:
+        description: "just release vscode extension"
+        required: false
+        default: "no"
   schedule:
     - cron: "0 8 * * *"
 
 jobs:
   cd:
     runs-on: ubuntu-latest
-
     steps:
       - name: Validate CD branch
         if: ${{ github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/heads/hotfix/') && github.ref != 'refs/heads/dev' }}
@@ -297,7 +300,7 @@ jobs:
           npx lerna publish from-package --yes
 
       - name: pack vsix
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') }}
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid != 'alpha' }}
         uses: nick-invision/retry@v2
         with:
           timeout_minutes: 10
@@ -308,6 +311,19 @@ jobs:
             cd ./packages/vscode-extension
             npm install --only=production
             npx vsce package
+      
+      - name: get version from vscode extension
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid != 'alpha' }}
+        id: vscode-version
+        run: |
+          if echo ${{ steps.version-change.outputs.EXTENSION_VERSION }}; 
+          then
+            echo "::set-output name=EXTENSION_VERSION::$(echo ${{steps.version-change.outputs.EXTENSION_VERSION}})"
+          else
+            vsname=$(cat packages/vscode-extension/package.json | jq -r '.name')
+            vsver=$(cat packages/vscode-extension/package.json | jq -r'.version')
+            echo "::set-output name=EXTENSION_VERSION::$(echo $vsname@vsver)"
+          fi
 
       - name: release daily VSCode extension to github
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && github.ref == 'refs/heads/dev'  }}
@@ -319,18 +335,18 @@ jobs:
           prerelease: true
 
       - name: release RC VSCode extension to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && contains(steps.version-change.outputs.CHANGED, 'rc') }}
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'rc' }}
         uses: ncipollo/release-action@v1.7.3
         with:
           token: ${{ secrets.CD_PAT }}
-          tag: ${{ steps.version-change.outputs.EXTENSION_VERSION }}
+          tag: ${{ steps.vscode-version.outputs.EXTENSION_VERSION }}
           artifacts: ./packages/**/*.vsix
           prerelease: true
       
       - name: release stable VSCode extension to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && !contains(steps.version-change.outputs.CHANGED, 'rc') && !contains(steps.version-change.outputs.CHANGED, 'alpha') }}
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
         uses: ncipollo/release-action@v1.7.3
         with:
           token: ${{ secrets.CD_PAT }}
-          tag: ${{ steps.version-change.outputs.EXTENSION_VERSION }}
+          tag: ${{ steps.vscode-version.outputs.EXTENSION_VERSION }}
           artifacts: ./packages/**/*.vsix
