--- a/templates/tab/ts/default/package.json
+++ b/templates/tab/ts/default/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
+    "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build:teamsfx": "cross-env-shell \"env-cmd -f .env.teamsfx.${TEAMS_FX_ENV} npm run build\"",
