--- a/templates/msgext/ts/default/package.json
+++ b/templates/msgext/ts/default/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "main": "./lib/index.js",
   "scripts": {
+    "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
+    "dev": "nodemon --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./index.ts",
     "build": "tsc --build",
     "start": "node ./lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/restify": "8.4.2",
+    "env-cmd": "^10.1.0",
     "typescript": "~3.9.2",
     "nodemon": "^2.0.7",
     "ts-node": "~9.1.1"
