--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -119,7 +119,7 @@ jobs:
       - name: sync up templates deps with sdk version for RC
         if: ${{ contains(steps.version-change.outputs.CHANGED, '@microsoft/teamsfx') && !contains(steps.version-change.outputs.CHANGED, 'templates@') && github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main' && github.event.inputs.preid == 'rc' }}
         run: |
-          node sdk-sync-up-version.js
+          node sdk-sync-up-version.js sdk
         working-directory: ./.github/scripts
 
       - name: sync up fx-core with templates version for RC
@@ -317,7 +317,7 @@ jobs:
             echo "::set-output name=EXTENSION_VERSION::$(echo ${{steps.version-change.outputs.EXTENSION_VERSION}})"
           else
             vsname=$(cat packages/vscode-extension/package.json | jq -r '.name')
-            vsver=$(cat packages/vscode-extension/package.json | jq -r'.version')
+            vsver=$(cat packages/vscode-extension/package.json | jq -r '.version')
             echo "::set-output name=EXTENSION_VERSION::$(echo $vsname@$vsver)"
           fi
 
