--- a/templates/cicd/github/ci.yml
+++ b/templates/cicd/github/ci.yml
@@ -1,35 +1,27 @@
-# This is just an example workflow for continuous deployment.
+# This is just an example workflow for continuous integration.
 # You should customize it to meet your own requirements.
-name: 'Continuous Deployment'
+name: 'Continuous Integration'
 on:
-  # When new commits are pushed onto the main branch.
-  push:
+  # When pull requests targeting the dev branch created.
+  pull_request:
     branches:
-      - main
+      - dev
 jobs:
-  buildAndPublish:
+  buildAndTest:
     runs-on: ubuntu-latest
-    # You can uncomment the line below to use environments (refer to https://docs.github.com/en/actions/reference/environments). 
-    #environment: test_environment
-    env:
-      M365_ACCOUNT_NAME: ${{secrets.M365_ACCOUNT_NAME}}
-      M365_ACCOUNT_PASSWORD: ${{secrets.M365_ACCOUNT_PASSWORD}}
-      # To specify the env name for multi-env feature.
-      TEAMSFX_ENV_NAME: staging
-
     steps:
       # Setup environment.
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-          
+
       - name: Checkout the code
         uses: actions/checkout@v2
-        
+ 
       # Build the project.
       # The way to build the current project depends on how you scaffold it.
       # Different folder structures require different commands set.
-      # 'npm ci' is used here to install dependencies and it depends on package-lock.json.
+      # 'npm ci' is prefered to be used here to install dependencies and it depends on package-lock.json.
       # If you prefer to use 'npm ci', please make sure to commit package-lock.json first, or just change it to 'npm install'.
       - name: Build the project
         run: {{build_script}}
@@ -39,9 +31,3 @@ jobs:
       # set up any unit test framework you prefer (for example, mocha or jest) and update the commands accordingly in below.
       - name: Run Unit Test
         run: {{ut_script}}
-      
-      - name: Deploy to hosting environment
-        uses: OfficeDev/teamsfx-cli-action@v1
-        with:
-          commands: deploy
-          env: ${{env.TEAMSFX_ENV_NAME}}
