--- a/templates/cicd/github/provision.yml
+++ b/templates/cicd/github/provision.yml
@@ -10,10 +10,12 @@ jobs:
     # You can uncomment the line below to use environments (refer to https://docs.github.com/en/actions/reference/environments). 
     #environment: test_environment
     env:
+{{#hosting_type_is_spfx}}
       M365_ACCOUNT_NAME: ${{secrets.M365_ACCOUNT_NAME}}
       M365_ACCOUNT_PASSWORD: ${{secrets.M365_ACCOUNT_PASSWORD}}
+{{/hosting_type_is_spfx}}
       # To specify the env name for multi-env feature.
-      TEAMSFX_ENV_NAME: staging
+      TEAMSFX_ENV_NAME: {{env_name}}
 
     steps:
       # Setup environment.
@@ -24,12 +26,28 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
 
+{{#hosting_type_is_azure}}
+      # Login Azure by service principal.
+      # Service principal for Azure is used, and to create Azure service principal for use, refer to https://github.com/OfficeDev/TeamsFx/tree/dev/docs/cicd_insider#how-to-create-azure-service-principals-for-use.
+      - name: Login Azure by service principal 
+        uses: OfficeDev/teamsfx-cli-action@v1
+        with:
+          commands: account login azure 
+          service-principal: true
+          username: ${{secrets.AZURE_SERVICE_PRINCIPAL_NAME}}
+          password: ${{secrets.AZURE_SERVICE_PRINCIPAL_PASSWORD}}
+          tenant: ${{secrets.AZURE_TENANT_ID}}
+
+{{/hosting_type_is_azure}}
       # We suggest to do the `teamsfx provision` step manually or in a separate workflow. The following steps are for your reference.
       # After provisioning, you should commit necessary files under .fx into the repository.
       - name: Provision hosting environment
         uses: OfficeDev/teamsfx-cli-action@v1
         with:
           commands: provision
+{{#hosting_type_is_azure}}
+          subscription: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+{{/hosting_type_is_azure}}
           env: ${{env.TEAMSFX_ENV_NAME}}
 
       - name: Commit provision configs if necessary
