--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -900,7 +900,7 @@
           {
             "id": "teamsToolkitEnvironment",
             "title": "Get your environment ready",
-            "description": "Teams Toolkit requires a several prerequisites. Prepare your Teams app development environment before you start.\n[Run prerequisite checker](https://aka.ms/teamsfx-video)",
+            "description": "Teams Toolkit requires several prerequisites. Prepare your Teams app development environment before you start.\n[Run prerequisite checker](https://aka.ms/teamsfx-video)",
             "media": {
               "svg": "media/environment.svg",
               "altText": "Get your environment ready"
