--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -13,8 +13,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
+          fetch-depth: 0
           ref: ${{ github.head_ref }}
           repository: ${{ github.event.pull_request.head.repo.full_name }}
+
+      - name: Merge Branches
+        run: |
+          git remote add ${{ github.event.pull_request.target.repo.owner.login }} ${{ github.event.pull_request.target.repo.git_url }}
+          git fetch ${{ github.event.pull_request.target.repo.owner.login }}
+          git merge ${{ github.event.pull_request.target.repo.owner.login }}/${{ github.event.pull_request.target.ref }}
 
       - name: Setup node
         uses: actions/setup-node@v2.1.2
