--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -19,6 +19,9 @@ jobs:
 
       - name: Merge Branches
         run: |
+          git config --global user.email "bot@user.noreply.github.com"
+          git config --global user.name "bot"
+
           git remote add ${{ github.event.pull_request.base.repo.owner.login }} ${{ github.event.pull_request.base.repo.git_url }}
           git fetch ${{ github.event.pull_request.base.repo.owner.login }}
           git merge ${{ github.event.pull_request.base.repo.owner.login }}/${{ github.event.pull_request.base.ref }}
