test: make it private

--- a/packages/extra-shot-mocha/package.json
+++ b/packages/extra-shot-mocha/package.json
@@ -4,6 +4,7 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "license": "MIT",
+  "private": "true",
   "scripts": {
     "build": "npx tsc -p ./",
     "lint:staged": "lint-staged",
