--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,8 +19,7 @@
     "prebuild": "npx json2ts --input src/schemas/envConfig.json --output src/schemas/envConfig.ts",
     "build": "tsc -p ./ && npx api-extractor run --local",
     "build:api-markdown": "npm run build && rimraf ../../docs/api && npx api-documenter markdown -i temp -o ../../docs/api",
-    "postbuild": "npx cpy src/schemas/*.json build/schemas/",
-    "prepare": "npm run build",
+    "postbuild": "cp src/schemas/*.json build/schemas/",
     "lint:fix": "eslint \"src/**/*.ts\" \"tests/**/*.ts\" --fix",
     "doc": "typedoc",
     "test:unit": "nyc --no-clean mocha --no-timeouts --require ts-node/register \"tests/**/*.ts\"",
