--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -37,7 +37,7 @@
     "clean": "rm -rf build",
     "build": "rimraf build && npx tsc -p ./",
     "lint:fix": "eslint --fix \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "prepare": "npm run build && node ./scripts/download-templates-zip.js $(git tag --list)",
+    "postinstall": "node ./scripts/download-templates-zip.js $(git tag --list)",
     "prepublishOnly": "npm run test:unit -- check-coverage --lines 0 && npm run build",
     "package": "rimraf build && webpack --mode production --config ./webpack.config.js",
     "check-sensitive": "npx eslint --plugin 'no-secrets' --cache --ignore-pattern 'package.json' --ignore-pattern 'package-lock.json'",
