chore: use wildcard to exclude login files

--- a/packages/cli/.nycrc
+++ b/packages/cli/.nycrc
@@ -6,15 +6,9 @@
     "src/cmds/preview/depsChecker/**/*",
     "src/cmds/preview/preview.ts",
     "src/cmds/preview/npmInstallHandler.ts",
-    "src/commonlib/appStudioLoginUserPassword.ts",
-    "src/commonlib/azureLoginCI.ts",
-    "src/commonlib/azureLoginUserPassword.ts",
-    "src/commonlib/codeFlowLogin.ts",
-    "src/commonlib/codeFlowTenantLogin.ts",
-    "src/commonlib/graphLogin.ts",
-    "src/commonlib/graphLoginCI.ts",
-    "src/commonlib/graphLoginUserPassword.ts",
-    "src/commonlib/sharepointLoginUserPassword.ts",
+    "src/commonlib/*Login.ts",
+    "src/commonlib/*LoginCI.ts",
+    "src/commonlib/*LoginUserPassword.ts",
     "src/index.ts",
     "cli.js",
     ".eslintrc.js",
