--- a/templates/package.json
+++ b/templates/package.json
@@ -8,6 +8,10 @@
         "precommit": "npm run check-sensitive && lint-staged",
         "version": "../.github/scripts/pkg-version.sh core-template"
     },
+    "dependencies": {
+      "@microsoft/teamsfx": "^0.5.0",
+      "@microsoft/adaptivecards-tools": "^0.1.2"
+    },
     "devDependencies": {
         "@shared/eslint-config": "file:../packages/eslint-config",
         "@shared/prettier-config": "file:../packages/prettier-config",
