--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,9 +20,10 @@
   "scripts": {
     "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css src/**/*.sh src/**/*.ps1 lib/",
     "build": "rimraf lib && tsc -p ./ && npm run copy-files",
+    "build:exe": "node buildExe.js",
     "watch": "rimraf lib && npm run copy-files && tsc -w -p ./",
     "webpack": "rimraf lib && node --max-old-space-size=4096 node_modules/webpack/bin/webpack.js --mode production --config ./webpack.config.js",
-    "package": "npm run webpack && npx pkg ./lib/index.js -t node14-win -o ./lib/server -c pkg.json",
+    "package": "npm run webpack && npm run build:exe",
     "prepack": "npm run webpack",
     "test:unit": "echo \"Not implemented\"",
     "check-format": "prettier --list-different --config .prettierrc.json --ignore-path .prettierignore \"{src,tests}/**/*.ts\" \"*.{js,json}\"",
@@ -76,6 +77,7 @@
     "path-browserify": "^1.0.1",
     "pkg": "^5.5.1",
     "prettier": "^2.4.1",
+    "rcedit": "^3.0.1",
     "sass-loader": "^11.1.1",
     "sinon": "^9.2.2",
     "source-map-support": "^0.5.19",
