chore(localdebug): remove launch configuration preLaunchTask
- remove launch configuration preLaunchTask: Start Frontend/Backend/Bot
- move Start Frontend/Backend/Bot to compound preLaunchTask
- update the endsPattern of bot problem matcher and show the bot problem
  matcher details in tasks.json
- update corresponding unit tests

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -760,7 +760,7 @@
         "background": {
           "activeOnStart": true,
           "beginsPattern": "[nodemon] starting",
-          "endsPattern": "listening|[nodemon] app crashed"
+          "endsPattern": "restify listening to|Bot/ME service listening at|[nodemon] app crashed"
         }
       }
     ],
