--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -760,7 +760,7 @@
         "background": {
           "activeOnStart": true,
           "beginsPattern": "[nodemon] starting",
-          "endsPattern": "restify listening to|Bot/ME service listening at|[nodemon] app crashed"
+          "endsPattern": "listening|[nodemon] app crashed"
         }
       }
     ],
