--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -133,7 +133,7 @@ jobs:
       - name: generate templates
         run: |
           curl -sSL https://git.io/get-mo -o mo && chmod +x mo && sudo mv mo /usr/local/bin/
-          .github/scripts/template-zip-autogen.sh ~/teamsfx_templates
+          .github/scripts/template-zip-autogen.sh /tmp/teamsfx_templates
 
       - name: update tag
         uses: richardsimko/update-tag@v1
@@ -150,7 +150,7 @@ jobs:
           token: ${{ secrets.CD_PAT }}
           prerelease: true
           tag: "templates-0.0.0-alpha"
-          artifacts: ~/teamsfx_templates/*.zip
+          artifacts: /tmp/teamsfx_templates/*.zip
           allowUpdates: true
 
       - name: update tag
@@ -168,14 +168,14 @@ jobs:
           token: ${{ secrets.CD_PAT }}
           prerelease: true
           tag: "templates@0.0.0-rc"
-          artifacts: ~/teamsfx_templates/*.zip
+          artifacts: /tmp/teamsfx_templates/*.zip
           allowUpdates: true
 
       - name: Create Templates Stable Release
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
         uses: ncipollo/release-action@v1.7.3
         with:
-          artifacts: ~/teamsfx_templates/*.zip
+          artifacts: /tmp/teamsfx_templates/*.zip
           name: 'Release for ${{ steps.version-change.outputs.TEMPLATE_VERSION }}'
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.version-change.outputs.TEMPLATE_VERSION }}
@@ -183,13 +183,13 @@ jobs:
 
       - name: Generate Tag List
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
-        run: git tag | grep templates > ~/template-tags.txt
+        run: git tag | grep templates > /tmp/template-tags.txt
 
       - name: Update Template Tag list Release
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
         uses: ncipollo/release-action@v1.7.3
         with:
-          artifacts: ~/template-tags.txt
+          artifacts: /tmp/template-tags.txt
           name: 'Template Tag List'
           body: 'Release to maintain template tag list.'
           token: ${{ secrets.github_token }}
@@ -197,7 +197,7 @@ jobs:
           allowUpdates: true
 
       - name: cleanup templates
-        run: rm -rf ./*.zip && git clean -df
+        run: git clean -df
 
       - name: just trigger function extension azure build pipeline for stable release
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'function-extension') && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'stable' }}
