--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -58,6 +58,7 @@
     "onCommand:fx-extension.openAppManagement",
     "onCommand:fx-extension.openBotManagement",
     "onCommand:fx-extension.openReportIssues",
+    "onCommand:fx-extension.getNewProjectPath",
     "onCommand:workbench.action.tasks.runTask",
     "workspaceContains:**/.fx/*",
     "onView:teamsfx",
@@ -622,6 +623,11 @@
         "command": "fx-extension.openHelpFeedbackLink",
         "title": "Learn more about help and feedback",
         "icon": "$(info)"
+      },
+      {
+        "command": "fx-extension.getNewProjectPath",
+        "title": "Teams: Get Path",
+        "enablement": "never"
       }
     ],
     "taskDefinitions": [
@@ -909,7 +915,7 @@
           {
             "id": "teamsToolkitBuildApp",
             "title": "Build your first Teams app",
-            "description": "Choose [Teams app capabilities](https://aka.ms/teamsfx-capabilities-overview) and build your first Teams app.\nYou can create it from the scratch or explore our samples to help you quickly get started with the real-world examples and code structures.\n[Create a new Teams app](command:fx-extension.create?%5B%22Webview%22%5D)\n[View samples](command:toSide:fx-extension.openSamples?%5B%22Webview%22%5D)",
+            "description": "Choose [Teams app capabilities](https://aka.ms/teamsfx-capabilities-overview) and build your first Teams app.\nYou can create it from the scratch or explore our samples to help you quickly get started with the real-world examples and code structures.\n[Create a new Teams app](command:fx-extension.getNewProjectPath?%5B%22Webview%22%5D)\n[View samples](command:toSide:fx-extension.openSamples?%5B%22Webview%22%5D)",
             "media": {
               "svg": "media/step_create.svg",
               "altText": "Build your first Teams app"
