--- a/.gitignore
+++ b/.gitignore
@@ -352,6 +352,7 @@ packages/fx-core/build/
 packages/vscode-extension/out/
 packages/failpoint-ts/build/
 packages/server/lib/
+packages/manifest/build/
 ## tmp files
 .nyc_output
 coverage
