--- a/packages/fx-core/templates/plugins/resource/cicd/github/cd.yml
+++ b/packages/fx-core/templates/plugins/resource/cicd/github/cd.yml
@@ -1,3 +1,4 @@
+{{=<% %>=}}
 # This is just an example workflow for continuous deployment.
 # You should customize it to meet your own requirements.
 name: 'Continuous Deployment'
@@ -12,12 +13,12 @@ jobs:
     # You can uncomment the line below to use environments (refer to https://docs.github.com/en/actions/reference/environments). 
     #environment: test_environment
     env:
-{{#hosting_type_contains_spfx}}
+<%#hosting_type_contains_spfx%>
       M365_ACCOUNT_NAME: ${{secrets.M365_ACCOUNT_NAME}}
       M365_ACCOUNT_PASSWORD: ${{secrets.M365_ACCOUNT_PASSWORD}}
-{{/hosting_type_contains_spfx}}
+<%/hosting_type_contains_spfx%>
       # To specify the env name for multi-env feature.
-      TEAMSFX_ENV_NAME: {{env_name}}
+      TEAMSFX_ENV_NAME: <%env_name%>
 
     steps:
       # Setup environment.
@@ -34,15 +35,15 @@ jobs:
       # 'npm ci' is used here to install dependencies and it depends on package-lock.json.
       # If you prefer to use 'npm ci', please make sure to commit package-lock.json first, or just change it to 'npm install'.
       - name: Build the project
-        run: {{build_script}}
+        run: <%build_script%>
 
       # Run unit test.
       # Currently, no opinionated solution for unit test provided during scaffolding, so,
       # set up any unit test framework you prefer (for example, mocha or jest) and update the commands accordingly in below.
       - name: Run Unit Test
-        run: {{ut_script}}
+        run: <%ut_script%>
 
-{{#hosting_type_contains_azure}}
+<%#hosting_type_contains_azure%>
       # Login Azure by service principal.
       # Service principal for Azure is used, and to create Azure service principal for use, refer to https://github.com/OfficeDev/TeamsFx/tree/dev/docs/cicd_insider#how-to-create-azure-service-principals-for-use.
       - name: Login Azure by service principal 
@@ -54,7 +55,7 @@ jobs:
           password: ${{secrets.AZURE_SERVICE_PRINCIPAL_PASSWORD}}
           tenant: ${{secrets.AZURE_TENANT_ID}}
       
-{{/hosting_type_contains_azure}}
+<%/hosting_type_contains_azure%>
       - name: Deploy to hosting environment
         uses: OfficeDev/teamsfx-cli-action@v1
         with:
