--- a/templates/tab/ts/default/package.json
+++ b/templates/tab/ts/default/package.json
@@ -21,6 +21,7 @@
     "@types/react-router-dom": "^5.1.7",
     "cross-env": "^7.0.3",
     "env-cmd": "^10.1.0",
+    "react-error-overlay": "6.0.9",
     "typescript": "^4.1.2"
   },
   "scripts": {
