chore(localdebug): change ngrok wording

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -824,7 +824,7 @@
               },
               "ngrok": {
                 "type": "boolean",
-                "description": "Ensure Ngrok is installed."
+                "description": "Ensure Ngrok is installed and started."
               },
               "devCert": {
                 "type": "boolean",
