--- a/packages/fx-core/templates/plugins/resource/cicd/azdo/publish.yml
+++ b/packages/fx-core/templates/plugins/resource/cicd/azdo/publish.yml
@@ -20,6 +20,8 @@ steps:
     M365_ACCOUNT_NAME: $(M365_ACCOUNT_NAME)
     M365_ACCOUNT_PASSWORD: $(M365_ACCOUNT_PASSWORD)
     M365_TENANT_ID: $(M365_TENANT_ID)
+    # To enable M365 account login by non-interactive mode. 
+    CI_ENABLED: 'true'
     TEAMSFX_ENV_NAME: <%env_name%>
   inputs:
     targetType: 'inline'
