--- a/packages/fx-core/templates/plugins/resource/cicd/github/provision.yml
+++ b/packages/fx-core/templates/plugins/resource/cicd/github/provision.yml
@@ -14,6 +14,7 @@ jobs:
 <%#hosting_type_contains_spfx%>
       M365_ACCOUNT_NAME: ${{secrets.M365_ACCOUNT_NAME}}
       M365_ACCOUNT_PASSWORD: ${{secrets.M365_ACCOUNT_PASSWORD}}
+      M365_TENANT_ID: ${{secrets.M365_TENANT_ID}}
 <%/hosting_type_contains_spfx%>
       # To specify the env name for multi-env feature.
       TEAMSFX_ENV_NAME: <%env_name%>
