--- a/packages/fx-core/templates/plugins/resource/cicd/github/publish.yml
+++ b/packages/fx-core/templates/plugins/resource/cicd/github/publish.yml
@@ -13,6 +13,7 @@ jobs:
     env:
       M365_ACCOUNT_NAME: ${{secrets.M365_ACCOUNT_NAME}}
       M365_ACCOUNT_PASSWORD: ${{secrets.M365_ACCOUNT_PASSWORD}}
+      M365_TENANT_ID: ${{secrets.M365_TENANT_ID}}
       # To specify the env name for multi-env feature.
       TEAMSFX_ENV_NAME: <%env_name%>
 
