--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -25,9 +25,7 @@
     "test:e2e": "npm run test:e2e:node && npm run test:e2e:browser",
     "ui-test": "mocha --no-timeouts -r test/mocha.env.ts -r ts-node/register test/ui/**/*.spec.ts --exit",
     "check-sensitive": "npx eslint --plugin 'no-secrets' --cache --ignore-pattern 'package.json' --ignore-pattern 'package-lock.json'",
-    "precommit": "npm run check-sensitive && lint-staged",
-    "version": "../../.github/scripts/pkg-version.sh templates",
-    "postversion": "../../.github/scripts/pkg-postversion.sh templates"
+    "precommit": "npm run check-sensitive && lint-staged"
   },
   "files": [
     "dist/*js",
